nexus3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP  
  ports:
    - name: repo
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: public
      port: 8082
      protocol: TCP
      targetPort: 8082
    - name: private
      port: 8083
      protocol: TCP
      targetPort: 8083
